--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,10 +1,22 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">Tinder clone</h5>
     <nav class="my-2 my-md-0 mr-md-3">
+
+    </nav>
+    <% if account_signed_in? %>
+    <nav class="my-2 my-md-0 mr-md-3">
+        <%= link_to 'Browse', browse_path, class: 'text-dark mr-3' %>
+        <%= link_to 'My Matches', '#', class: 'text-dark mr-3' %>
+        <%= link_to 'Settings', edit_account_registration_path, class: 'text-dark mr-3' %>
+        <%= link_to 'Sign out', destroy_account_session_path, method: :delete, class: 'btn btn-outline-primary mr-2' %>
+    </nav>
+    <% else %>
+    <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="#">Features</a>
         <a class="p-2 text-dark" href="#">Pricing</a>
         <a class="p-2 text-dark" href="#">Support</a>
+        <%= link_to 'Sign in', new_account_session_path, class: "btn btn-outline-primary mr-2" %>
+        <%= link_to 'Sign up', new_account_registration_path, class: "btn btn-outline-primary" %>
     </nav>
-    <a class="btn btn-outline-primary" href="#">Sign in</a>
-    <a class="btn btn-outline-primary" href="#">Sign up</a>
+    <% end %>
 </div>
