--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,8 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap/scss/bootstrap
+ *= require @fortawesome/fontawesome-free/scss/fontawesome
  *= require_tree .
  *= require_self
  */
-
- /* @import "bootstrap/scss/bootstrap"; */
