--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">Tinder clone</h5>
     <nav class="my-2 my-md-0 mr-md-3">
 
@@ -6,7 +6,7 @@
     <% if account_signed_in? %>
     <nav class="my-2 my-md-0 mr-md-3">
         <%= link_to 'Browse', browse_path, class: 'text-dark mr-3' %>
-        <%= link_to 'My Matches', '#', class: 'text-dark mr-3' %>
+        <%= link_to 'My Matches', matches_path, class: 'text-dark mr-3' %>
         <%= link_to 'Settings', edit_account_registration_path, class: 'text-dark mr-3' %>
         <%= link_to 'Sign out', destroy_account_session_path, method: :delete, class: 'btn btn-outline-primary mr-2' %>
     </nav>
