--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,14 @@
   </head>
 
   <body>
-    <%= render 'layouts/nav' %>
+    <%= render 'layouts/nav' unless account_signed_in? %>
     
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <!-- <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p> -->
 
-    <div class="container">
+    <div class="container-fluid p-0 bg-light">
       <%= yield %>
     </div>
-    <%= render 'layouts/footer' %>
+    <%= render 'layouts/footer' unless account_signed_in? %>
   </body>
 </html>
